fix flex areas to still allow column wrapping on mobile

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -205,6 +205,7 @@ p, span {
 }
 .flex {
 	display: flex;
+	flex-wrap: wrap;
 }
 .flex-basis-1 {
 	flex-basis: 1;
